--- a/features/admob-setup.mdx
+++ b/features/admob-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'AdMob Integration'
+title: 'Setup AdMob Advertising'
 description: 'How to set up Google AdMob mobile ads in your app'
 ---
 
