--- a/features/auth/google-auth.mdx
+++ b/features/auth/google-auth.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Google Sign-In Guide"
+title: "Google Sign-In"
 description: "Set up Google Sign-In authentication for your mobile app"
 ---
 
