--- a/features/in-app-purchases/android-products.mdx
+++ b/features/in-app-purchases/android-products.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Android Products Setup"
+title: "Google Play Products"
 description: "Create subscription products in Google Play Console for your Android app"
 ---
 
