--- a/features/in-app-purchases/app-store-connect-setup.mdx
+++ b/features/in-app-purchases/app-store-connect-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "App Store Connect Setup"
+title: "Setup App Store"
 description: "Create and configure your app in App Store Connect for in-app purchases"
 ---
 
