--- a/features/in-app-purchases/closed-testing.mdx
+++ b/features/in-app-purchases/closed-testing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Android Closed Testing"
+title: "Test on Android"
 description: "Set up closed testing for your Android app to test in-app purchases"
 ---
 
