--- a/features/in-app-purchases/google-play-console-setup.mdx
+++ b/features/in-app-purchases/google-play-console-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Google Play Console Setup"
+title: "Setup Google Play"
 description: "Create and configure your app in Google Play Console for in-app purchases"
 ---
 
