--- a/features/in-app-purchases/import-products-rc.mdx
+++ b/features/in-app-purchases/import-products-rc.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Import Products to RevenueCat"
+title: "Import to RevenueCat"
 description: "Import your subscription products from app stores into RevenueCat and configure entitlements"
 ---
 
