--- a/features/in-app-purchases/ios-products.mdx
+++ b/features/in-app-purchases/ios-products.mdx
@@ -1,5 +1,5 @@
 ---
-title: "iOS Products Setup"
+title: "App Store Products"
 description: "Create subscription products in App Store Connect for your iOS app"
 ---
 
