--- a/features/in-app-purchases/ios-sandbox.mdx
+++ b/features/in-app-purchases/ios-sandbox.mdx
@@ -1,5 +1,5 @@
 ---
-title: "iOS Sandbox Testing"
+title: "Test on iOS"
 description: "Set up sandbox testing for your iOS app to test in-app purchases"
 ---
 
