--- a/features/in-app-purchases/overview.mdx
+++ b/features/in-app-purchases/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "In-App Purchases Overview"
+title: "Monetize Your App"
 description: "An overview of implementing in-app purchases and subscriptions in your app"
 ---
 
