--- a/features/in-app-purchases/revenuecat.mdx
+++ b/features/in-app-purchases/revenuecat.mdx
@@ -1,5 +1,5 @@
 ---
-title: "RevenueCat Setup"
+title: "Setup RevenueCat"
 description: "Set up RevenueCat for managing in-app purchases and subscriptions across iOS and Android"
 ---
 
