--- a/features/in-app-purchases/superwall.mdx
+++ b/features/in-app-purchases/superwall.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Superwall Setup"
+title: "Superwall Paywalls"
 description: "Set up Superwall for paywall management and A/B testing with RevenueCat integration"
 ---
 
