--- a/features/posthog-setup.mdx
+++ b/features/posthog-setup.mdx
@@ -1,108 +1,108 @@
-# PostHog Analytics
+---
+title: "Track User Analytics"
+description: "Add powerful analytics to your app with PostHog integration"
+---
 
-This boilerplate comes with built-in support for PostHog analytics, which has been modularized for simplicity.
+import { Steps, Tabs, Tab } from 'nextra-theme-docs'
 
-## Setup Instructions
+This boilerplate comes with built-in support for PostHog analytics, helping you understand how users interact with your app. Let's set it up!
 
-<Step title="Create a PostHog Account">
-  Go to the [PostHog website](https://us.posthog.com/signup) and create an account.
+<Steps>
+
+### Create a PostHog Account
+Go to the [PostHog website](https://us.posthog.com/signup) and create an account.
+
+At the top of the signup page, you'll need to choose a **Data Region**:
+
+- **US hosting** (Virginia, USA)
+  - Faster if you and your users are based in the US
+  - Easier to comply with some US regulations
+
+- **EU hosting** (Frankfurt, Germany)
+  - Faster if you and your users are based in Europe
+  - Keeps data in the EU to comply with GDPR requirements
+
+You can migrate to another region later if needed.
+
+### Select Product Analytics
+On the welcome screen, click the **Product Analytics** button.
+
+This will take you to the onboarding process for setting up analytics in your project.
+
+### Choose React Native Integration
+In the installation screen, select **React Native** as your source type from the menu on the left.
+
+You'll see integration instructions specifically for React Native applications.
+
+### Copy Your API Key and Host
+From the [PostHog Project Settings](https://app.posthog.com/project/settings), locate and copy your:
+- API Key (looks like `phc_XXXXXXXXXX...`) 
+- Host URL (Depending on your Data Region, `https://us.i.posthog.com` or `https://eu.i.posthog.com`)
+
+You'll need these values to configure your application.
+
+### Configure Environment Variables
+Add your PostHog API key and host to your environment variables in `.env`:
+
+```bash
+EXPO_PUBLIC_POSTHOG_API_KEY=your-posthog-api-key-here
+EXPO_PUBLIC_POSTHOG_HOST=your-posthog-host-here
+```
+
+### Install Dependencies
+Install the PostHog React Native package and its required dependencies:
+
+```bash
+npx expo install posthog-react-native expo-file-system expo-application expo-device expo-localization
+```
+
+### Enable PostHog
+The boilerplate already includes code for PostHog analytics, but it's commented out by default.
+Uncomment all code blocks marked with `TODO: PostHog` in `app/_layout.tsx`:
+
+- The PostHog imports
+- The PostHog provider wrapper around your app
+
+### Track Events
+Once enabled, you can track events in your app using the PostHog hook:
+
+```typescript
+import { usePostHog } from 'posthog-react-native';
+
+function MyComponent() {
+  const posthog = usePostHog();
   
-  At the top of the signup page, you'll need to choose a **Data Region**:
-  
-  - **US hosting** (Virginia, USA)
-    - Faster if you and your users are based in the US
-    - Easier to comply with some US regulations
-  
-  - **EU hosting** (Frankfurt, Germany)
-    - Faster if you and your users are based in Europe
-    - Keeps data in the EU to comply with GDPR requirements
-  
-  You can migrate to another region later if needed.
-  
-  After completing the signup flow, you'll see a welcome screen asking "Where do you want to start?"
-</Step>
-
-<Step title="Select Product Analytics">
-  On the welcome screen, click the **Product Analytics** button.
-  
-  This will take you to the onboarding process for setting up analytics in your project.
-</Step>
-
-<Step title="Choose React Native Integration">
-  In the installation screen, select **React Native** as your source type from the menu on the left.
-  
-  You'll see integration instructions specifically for React Native applications.
-</Step>
-
-<Step title="Copy Your API Key and Host">
-  From the [PostHog Project Settings](https://app.posthog.com/project/settings), locate and copy your:
-  - API Key (looks like `phc_XXXXXXXXXX...`) 
-  - Host URL (Depending on your Data Region, `https://us.i.posthog.com` or `https://eu.i.posthog.com`)
-  
-  You'll need these values to configure your application.
-</Step>
-
-<Step title="Configure environment variables">
-  Add your PostHog API key and host to your environment variables in `.env`:
-  
-  ```
-  EXPO_PUBLIC_POSTHOG_API_KEY=your-posthog-api-key-here
-  EXPO_PUBLIC_POSTHOG_HOST=your-posthog-host-here
-  ```
-</Step>
-
-<Step title="Install the dependency">
-  Install the PostHog React Native package:
-
-  ```bash
-  npx expo install posthog-react-native expo-file-system expo-application expo-device expo-localization
-  ```
-</Step>
-
-
-<Step title="Uncomment PostHog Code">
-  The boilerplate already includes code for PostHog analytics, but it's commented out by default.
-  Uncomment all code blocks marked with `TODO: PostHog` in this file:
-  
-  - `app/_layout.tsx`
-  
-  You'll need to uncomment:
-  - The PostHog imports
-  - The PostHog provider wrapper around your app
-</Step>
-
-<Step title="Using PostHog for Event Tracking">
-  Once enabled, you can track events in your app using the PostHog hook. Here's an example:
-
-  ```typescript
-  import { usePostHog } from 'posthog-react-native';
-
-  function MyComponent() {
-    const posthog = usePostHog();
+  const handleButtonPress = () => {
+    // Track a custom event
+    posthog.capture('button_pressed', {
+      buttonName: 'signup',
+      userType: 'new'
+    });
     
-    const handleButtonPress = () => {
-      // Track a custom event
-      posthog.capture('button_pressed', {
-        buttonName: 'signup',
-        userType: 'new'
-      });
-      
-      // Rest of your handler logic
-    };
-    
-    return (
-      <Button onPress={handleButtonPress} title="Sign Up" />
-    );
-  }
-  ```
-</Step>
-
-<Step title="Set Up Screen Tracking">
-  For automatic screen tracking with Expo Router, consider adding middleware to track screen views.
+    // Rest of your handler logic
+  };
   
-  This allows you to track user navigation throughout your app automatically.
-</Step>
+  return (
+    <Button onPress={handleButtonPress} title="Sign Up" />
+  );
+}
+```
 
-## Additional Resources
+### Track Screen Views
+For automatic screen tracking with Expo Router, consider adding middleware to track screen views.
 
-For full documentation, visit the [PostHog React Native SDK documentation](https://posthog.com/docs/libraries/react-native).
+This allows you to track user navigation throughout your app automatically.
+
+</Steps>
+
+## Next Steps
+
+<Callout type="info">
+  For more advanced features and customization options, check out the [PostHog React Native SDK documentation](https://posthog.com/docs/libraries/react-native).
+</Callout>
+
+Now that you have PostHog set up, you can:
+- Create funnels to track user conversion
+- Set up cohorts to segment your users
+- Analyze feature usage and engagement
+- Monitor app performance and errors
