--- a/features/push-setup.mdx
+++ b/features/push-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Push Notifications Setup"
+title: "Setup Push Notifications"
 description: "Configure push notifications for your BuildWithAI app on iOS and Android"
 ---
 
