--- a/features/ui-styling-guide.mdx
+++ b/features/ui-styling-guide.mdx
@@ -1,7 +1,6 @@
 ---
-title: 'UI & Styling Guide'
+title: 'Make it Stunning'
 description: 'Build beautiful interfaces with React Native Reusables and your pre-configured design system'
-icon: 'palette'
 ---
 
 # UI & Styling Guide
