--- a/quickstart/development-build.mdx
+++ b/quickstart/development-build.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Development Build"
+title: "1. Create Development Build"
 description: "Create and use development builds for efficient app development"
 ---
 
