--- a/quickstart/install-development-build.mdx
+++ b/quickstart/install-development-build.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Install Development Build"
+title: "3. Install & Run Your App"
 description: "Install and set up your development build on your device"
 ---
 
