--- a/quickstart/supabase-setup.mdx
+++ b/quickstart/supabase-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Supabase Setup"
+title: "2. Setup Supabase Backend"
 description: "Set up your Supabase project for authentication"
 ---
 
