--- a/quickstart/eas-setup.mdx
+++ b/quickstart/eas-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "EAS Setup"
+title: "3. Setup EAS Build"
 description: "Set up Expo Application Services (EAS) for building your app"
 ---
 
