--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Project Setup"
+title: "1. Clone & Setup Project"
 description: "Get your BuildWithAI project up and running in minutes"
 ---
 
